# readthedocs-assistant

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
docs/source/: conf.py  index.rst
src/readthedocs_assistant/: __init__.py  cli.py  config.py  github.py  io.py  migrators.py  types.py  validation.py
src/readthedocs_assistant/commands/: __init__.py  migrate_config.py
tests/: test_cli.py  test_github.py  test_import.py  test_migrators.py
