[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "readthedocs-assistant"
readme = "README.md"
authors = [
    {name = "Juan Luis Cano Rodríguez", email = "juanlu@readthedocs.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version", "description"]

[tool.flit.module]
name = "readthedocs_assistant"

[project.urls]
source = "https://github.com/readthedocs/readthedocs-assistant"
tracker = "https://github.com/readthedocs/readthedocs-assistant/issues"
documentation = "https://readthedocs-assistant.readthedocs.io"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx~=4.3.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
